force-app/main/default/objects/Patients__c/Patients__c.object-meta.xml
<CustomObject>
    <label>Patient</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Patients Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>