force-app/main/default/objects/Patients__c/fields/Patient_City__c.field-meta.xml
<CustomField>
    <fullName>Patient_City__c</fullName>
    <label>Patient City</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Patient_State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Ongole</fullName>
            </value>
            <value>
                <fullName>San Antonio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>