force-app/main/default/objects/Patients__c/fields/Patient_Country__c.field-meta.xml
<CustomField>
    <fullName>Patient_Country__c</fullName>
    <label>Patient Country</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>