force-app/main/default/objects/Patients__c/fields/Patient_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_Country_Code__c</fullName>
    <formula>CASE(  Patient_Country__c  , 
&quot;Brazil&quot;,&quot;BR&quot;, 
&quot;Brunei &quot;,&quot;BN&quot;, 
&quot;Bulgaria&quot;,&quot;BG&quot;, 
&quot;Cameroon&quot;,&quot;CM&quot;, 
&quot;Canada&quot;,&quot;CA&quot;, 
&quot;Chile&quot;,&quot;CL&quot;, 
&quot;China&quot;,&quot;CN&quot;, 
&quot;Colombia&quot;,&quot;CO&quot;, 
&quot;El Salvador&quot;,&quot;SV&quot;, 
&quot;Estonia&quot;,&quot;EE&quot;, 
&quot;Ethiopia&quot;,&quot;ET&quot;, 
&quot;Finland&quot;,&quot;FI&quot;, 
&quot;France&quot;,&quot;FR&quot;, 
&quot;Gambia&quot;,&quot;GM&quot;, 
&quot;Georgia&quot;,&quot;GE&quot;, 
&quot;Germany&quot;,&quot;DE&quot;, 
&quot;Ghana&quot;,&quot;GH&quot;, 
&quot;Greece&quot;,&quot;GR&quot;, 
&quot;Greenland&quot;,&quot;GL&quot;, 
&quot;Guatemala&quot;,&quot;GT&quot;, 
&quot;Guinea-Bissau&quot;,&quot;GW&quot;, 
&quot;Honduras&quot;,&quot;HN&quot;, 
&quot;Hong Kong&quot;,&quot;HK&quot;, 
&quot;Hungary&quot;,&quot;HU&quot;, 
&quot;India&quot;,&quot;IN&quot;, 
&quot;Indonesia&quot;,&quot;ID&quot;, 
&quot;Iran (Islamic Republic Of)&quot;,&quot;IR&quot;, 
&quot;Iraq&quot;,&quot;IQ&quot;, 
&quot;Ireland&quot;,&quot;IE&quot;, 
&quot;Israel&quot;,&quot;IL&quot;, 
&quot;Libyan Arab Jamahiriya&quot;,&quot;LY&quot;, 
&quot;Liechtenstein&quot;,&quot;LI&quot;, 
&quot;Lithuania&quot;,&quot;LT&quot;, 
&quot;Luxembourg&quot;,&quot;LU&quot;, 
&quot;Malaysia&quot;,&quot;MY&quot;,
&quot;Mali&quot;,&quot;ML&quot;,
&quot;Mauritania&quot;,&quot;MR&quot;,
&quot;Mexico&quot;,&quot;MX&quot;,
&quot;Mongolia&quot;,&quot;MN&quot;,
&quot;Morocco&quot;,&quot;MA&quot;,
&quot;Myanmar&quot;,&quot;MM&quot;,
&quot;Nepal&quot;,&quot;NP&quot;,
&quot;Netherlands&quot;,&quot;NL&quot;,
&quot;Netherlands Antilles&quot;,&quot;AN&quot;,
&quot;New Caledonia&quot;,&quot;NC&quot;,
&quot;New Zealand&quot;,&quot;NZ&quot;,
&quot;Niger&quot;,&quot;NE&quot;,
&quot;Nigeria&quot;,&quot;NG&quot;,
&quot;Niue&quot;,&quot;NU&quot;,
&quot;Norway&quot;,&quot;NO&quot;,
&quot;Oman&quot;,&quot;OM&quot;,
&quot;Pakistan&quot;,&quot;PK&quot;,
&quot;Portugal&quot;,&quot;PT&quot;,
&quot;Puerto Rico&quot;,&quot;PR&quot;,
&quot;Qatar&quot;,&quot;QA&quot;,
&quot;Romania&quot;,&quot;RO&quot;,
&quot;Russian Federation&quot;,&quot;RU&quot;,
&quot;Sierra Leone&quot;,&quot;SL&quot;,
&quot;Singapore&quot;,&quot;SG&quot;,
&quot;Slovakia (Slovak Republic)&quot;,&quot;SK&quot;,
&quot;Slovenia&quot;,&quot;SI&quot;,
&quot;South Africa&quot;,&quot;ZA&quot;,
&quot;Spain&quot;,&quot;ES&quot;,
&quot;Sri Lanka&quot;,&quot;LK&quot;,
&quot;Switzerland&quot;,&quot;CH&quot;,
&quot;Syrian Arab Republic&quot;,&quot;SY&quot;,
&quot;Taiwan&quot;,&quot;TW&quot;,
&quot;Tanzania, United Republic Of&quot;,&quot;TZ&quot;,
&quot;Thailand&quot;,&quot;TH&quot;,
&quot;United Arab Emirates&quot;,&quot;AE&quot;,
&quot;United Kingdom&quot;,&quot;GB&quot;,
&quot;United States&quot;,&quot;US&quot;,
&quot;United States&quot;,&quot;usa&quot;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Country Code</label>
    <type>Text</type>
</CustomField>