force-app/main/default/objects/Patients__c/fields/Patient_Country_Telephone_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_Country_Telephone_Code__c</fullName>
    <formula>CASE( Patient_Country__c,&quot;India&quot;,91,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Country Telephone Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>