force-app/main/default/objects/Patients__c/fields/Patient_State__c.field-meta.xml
<CustomField>
    <fullName>Patient_State__c</fullName>
    <label>Patient State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Punjab</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>Kerala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>